--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -1,5 +1,5 @@
 name: Unit Test
-on: [push, pull_request]
+on: [push]
 jobs:
   unit-test:
     strategy:
@@ -12,6 +12,9 @@ jobs:
       uses: actions/setup-go@v3
       with:
         go-version: ${{ matrix.go-version }}
+    
+    - name: Checkout code
+      uses: actions/checkout@v3
 
     - name: Generate coverage report
       run: |
