--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -4,7 +4,7 @@ jobs:
   unit-test:
     strategy:
       matrix:
-        go-version: [1.20.x]
+        go-version: [1.18.x, 1.19.x, 1.20.x]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
@@ -16,11 +16,12 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Generate coverage report
+    - name: Test
       run: |
-        go test -coverprofile cover.out ./
+        go test -race -coverprofile cover.out ./...
     
     - name: Upload coverage to Codecov
+      if: matrix.go-version == '1.20.x'
       uses: codecov/codecov-action@v3
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
