--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -15,6 +15,8 @@ jobs:
       with:
         go-version: ${{ matrix.go-version }}
         cache-dependency-path: "**/go.sum"
+    - name: Lint 
+      uses: golangci/golangci-lint-action@v4
     - name: Test
       run: |
         go test -race -coverprofile cover.out ./...
